src/test/auth.test.ts
import request from 'supertest';
import { App } from '@/app';
import { CreateUserDto } from '@/application/user/model/users.dto';
import { AuthRoute } from '@/presentation/routes/auth.route';

afterAll(async () => {
  await new Promise<void>(resolve => setTimeout(() => resolve(), 500));
});

describe('Testing Auth', () => {
  describe('[POST] /signup', () => {
    it('response should have the Create userData', () => {
      const userData: CreateUserDto = {
        email: 'test@email.com',
        password: 'q1w2e3r4',
        firstname: 'test',
        lastname: 'test',
        phoneNumber: '123',
      };

      const authRoute = new AuthRoute();
      const app = new App();
      return request(app.getServer()).post('/signup').send(userData).expect(201);
    });
  });

  describe('[POST] /login', () => {
    it('response should have the Set-Cookie header with the Authorization token', async () => {
      const userData: CreateUserDto = {
        email: 'test@email.com',
        password: 'q1w2e3r4',
        firstname: 'test',
        lastname: 'test',
        phoneNumber: '123',
      };

      const authRoute = new AuthRoute();
      const app = new App();
      return request(app.getServer())
        .post('/login')
        .send(userData)
        .expect('Set-Cookie', /^Authorization=.+/);
    });
  });

  // error: StatusCode : 404, Message : Authentication token missing
  describe('[POST] /logout', () => {
    it('logout Set-Cookie Authorization=; Max-age=0', () => {
      const app = new App();

      return request(app.getServer())
        .post('/logout')
        .expect('Set-Cookie', /^Authorization=\;/);
    });
  });
});
